--- a/src/views/sample.ejs
+++ b/src/views/sample.ejs
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WEB</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
     hello world
+    <div><img class="image-50" src="images/1.jpg" alt=""></div>
 </body>
 
 </html>
