--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -8,8 +8,12 @@
 </head>
 
 <body>
-    hello world
-    <div><img class="image-50" src="images/1.jpg" alt=""></div>
+    <div class="topnav">
+        <a class="active" href="#home">Home</a>
+        <a href="#news">News</a>
+        <a href="#contact">Contact</a>
+        <a href="#about">About</a>
+    </div>
 </body>
 
 </html>
