--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -3,6 +3,16 @@
     padding: 0;
 }
 
+.form-add-new{
+  margin: 0 auto;
+  width: 500px;
+  padding: 20px;
+}
+
+.input-group{
+  padding: 10px;
+}
+
 /* Add a black background color to the top navigation */
 .topnav {
     background-color: #333;
@@ -29,4 +39,9 @@
   .topnav a.active {
     background-color: #04AA6D;
     color: white;
+  }
+
+  button{
+    margin: 10px;
+    cursor: pointer;
   }
