--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -12,30 +12,35 @@
         <a class="active" href="/">Home</a>
         <a href="/create-user-page">Create User</a>
     </div>
-
-    <div class="table-container">
-        <h2>List Users</h2>
-        <table>
-            <tr>
-                <th>ID</th>
-                <th>Email</th>
-                <th>Name</th>
-                <th>City</th>
-            </tr>
-            <tr>
-                <td>Peter</td>
-                <td>Griffin</td>
-                <td>$100</td>
-                <td>$100</td>
-            </tr>
-            <tr>
-                <td>Lois</td>
-                <td>Griffin</td>
-                <td>$150</td>
-                <td>$150</td>
-            </tr>
-        </table>
-    </div>
+    <%= JSON.stringify(listUsers) %>
+        <div class="table-container">
+            <h2>List Users</h2>
+            <table>
+                <tr>
+                    <th>ID</th>
+                    <th>Email</th>
+                    <th>Name</th>
+                    <th>City</th>
+                    <th>Actions</th>
+                </tr>
+                <tr>
+                    <td>Peter</td>
+                    <td>Griffin</td>
+                    <td>$100</td>
+                    <td>$100</td>
+                    <td>
+                        <button>Edit</button>
+                        <button>Delete</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Lois</td>
+                    <td>Griffin</td>
+                    <td>$150</td>
+                    <td>$150</td>
+                </tr>
+            </table>
+        </div>
 
 
 </body>
