--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -12,35 +12,38 @@
         <a class="active" href="/">Home</a>
         <a href="/create-user-page">Create User</a>
     </div>
-    <%= JSON.stringify(listUsers) %>
-        <div class="table-container">
-            <h2>List Users</h2>
-            <table>
+    <div class="table-container">
+        <h2>List Users</h2>
+        <table>
+            <tr>
+                <th>ID</th>
+                <th>Email</th>
+                <th>Name</th>
+                <th>City</th>
+                <th>Actions</th>
+            </tr>
+            <% listUsers.forEach((user)=> { %>
                 <tr>
-                    <th>ID</th>
-                    <th>Email</th>
-                    <th>Name</th>
-                    <th>City</th>
-                    <th>Actions</th>
-                </tr>
-                <tr>
-                    <td>Peter</td>
-                    <td>Griffin</td>
-                    <td>$100</td>
-                    <td>$100</td>
+                    <td>
+                        <%=user.id%>
+                    </td>
+                    <td>
+                        <%=user.email%>
+                    </td>
+                    <td>
+                        <%=user.email%>
+                    </td>
+                    <td>
+                        <%=user.email%>
+                    </td>
                     <td>
                         <button>Edit</button>
                         <button>Delete</button>
                     </td>
                 </tr>
-                <tr>
-                    <td>Lois</td>
-                    <td>Griffin</td>
-                    <td>$150</td>
-                    <td>$150</td>
-                </tr>
-            </table>
-        </div>
+                <% }); %>
+        </table>
+    </div>
 
 
 </body>
