--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -31,10 +31,10 @@
                         <%=user.email%>
                     </td>
                     <td>
-                        <%=user.email%>
+                        <%=user.name%>
                     </td>
                     <td>
-                        <%=user.email%>
+                        <%=user.city%>
                     </td>
                     <td>
 
